@@ -1,5 +1,5 @@
 dnl
-dnl $Id: config.m4,v 1.114 2002/09/11 16:40:35 sniper Exp $
+dnl $Id: config.m4,v 1.115 2002/10/06 06:03:16 rasmus Exp $
 dnl
 
 dnl
@@ -243,7 +243,7 @@ if test "$PHP_GD" = "php"; then
         libgd/gd_io_file.c libgd/gd_ss.c libgd/gd_io_ss.c libgd/gd_png.c libgd/gd_jpeg.c \
 		libgd/gdxpm.c libgd/gdfontt.c libgd/gdfonts.c libgd/gdfontmb.c libgd/gdfontl.c \
 		libgd/gdfontg.c libgd/gdtables.c libgd/gdft.c libgd/gdcache.c libgd/gdkanji.c \
-		libgd/wbmp.c libgd/gd_wbmp.c libgd/gdhelpers.c libgd/gd_topal.c"
+		libgd/wbmp.c libgd/gd_wbmp.c libgd/gdhelpers.c libgd/gd_topal.c libgd/gd_gif_in.c"
 
 dnl check for fabsf and floorf which are available since C99
   AC_CHECK_FUNCS(fabsf floorf)
@@ -273,6 +273,7 @@ dnl These are always available with bundled library
   AC_DEFINE(HAVE_GD_GD2,              1, [ ])
   AC_DEFINE(HAVE_GD_PNG,              1, [ ])
   AC_DEFINE(HAVE_GD_BUNDLED,          1, [ ])
+  AC_DEFINE(HAVE_GD_GIF_READ,          1, [ ])
 
 dnl Make sure the libgd/ is first in the include path
   GDLIB_CFLAGS="-DHAVE_LIBPNG"
